# GWarden

./: README.md  com.gwarden.mwickham.github.json  meson.build
data/: com.gwarden.mwickham.github.desktop.in  com.gwarden.mwickham.github.gschema.xml  com.gwarden.mwickham.github.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: controller.py  gwarden.gresource.xml  gwarden.in  main.py  meson.build  style.css
src/api/: controller.py  passer.py  types.py
src/pages/: information_pannel.py  item_list.py  login_page.py
src/state/: state.py  state_manager.py  state_widget.py
src/widgets/: specialised_widgets.py  standard_widget.py
